--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-VERSION_NAME=3.7.0
+VERSION_NAME=3.7.0-airbnb
 VERSION_MAJOR=3
 VERSION_MINOR=7
 VERSION_PATCH=0
@@ -14,13 +14,13 @@ POM_DEVELOPER_ID=sjudd
 POM_DEVELOPER_NAME=Sam Judd
 POM_DEVELOPER_EMAIL=judds@google.com
 
-SUPPORT_V4_VERSION=19.1.0
-SUPPORT_V7_VERSION=19.1.0
+SUPPORT_V4_VERSION=23.4.0
+SUPPORT_V7_VERSION=23.4.0
 # TODO: Upgrade to latest version of Volley when we compile with Java 7.
 VOLLEY_VERSION=1.0.8
 OK_HTTP_VERSION=2.2.0
-OK_HTTP3_VERSION=3.0.1
-ANDROID_GRADLE_VERSION=1.0.0
+OK_HTTP3_VERSION=3.3.1
+ANDROID_GRADLE_VERSION=2.1.0
 
 ROBOLECTRIC_GRADLE_VERSION=0.14.0
 COVERALLS_GRADLE_VERSION=2.0.1
@@ -31,7 +31,7 @@ ROBOLECTRIC_VERSION=2.4
 MOCKWEBSERVER_VERSION=1.6.0
 TRUTH_VERSION=0.24
 
-COMPILE_SDK_VERSION=19
-BUILD_TOOLS_VERSION=19.1.0
-TARGET_SDK_VERSION=19
+COMPILE_SDK_VERSION=23
+BUILD_TOOLS_VERSION=23.0.2
+TARGET_SDK_VERSION=23
 MIN_SDK_VERSION=10
